general voucher is done

--- a/VoucherManagementSystem/Views/Shared/_Layout.cshtml
+++ b/VoucherManagementSystem/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="voucherDropdown">
                                 <li><a class="dropdown-item" asp-controller="Vouchers" asp-action="Index">All Vouchers</a></li>
+                                <li><a class="dropdown-item" asp-controller="Vouchers" asp-action="GeneralCreate"><strong>General Create</strong></a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" asp-controller="Vouchers" asp-action="Create" asp-route-type="Purchase">New Purchase</a></li>
                                 <li><a class="dropdown-item" asp-controller="Vouchers" asp-action="Create" asp-route-type="Sale">New Sale</a></li>
