--- a/VoucherManagementSystem/Views/Vouchers/Index.cshtml
+++ b/VoucherManagementSystem/Views/Vouchers/Index.cshtml
@@ -61,7 +61,10 @@
                 <h5>Voucher List</h5>
             </div>
             <div class="col-6 text-end">
-                <div class="dropdown">
+                <a asp-action="GeneralCreate" class="btn btn-primary me-2">
+                    <i class="bi bi-plus-circle-fill"></i> General Create
+                </a>
+                <div class="dropdown d-inline-block">
                     <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown">
                         <i class="bi bi-plus-circle"></i> New Voucher
                     </button>
