--- a/VoucherManagementSystem/Views/Vouchers/GeneralCreate.cshtml
+++ b/VoucherManagementSystem/Views/Vouchers/GeneralCreate.cshtml
@@ -117,6 +117,7 @@
     </div>
     <div class="card-body">
         <form asp-action="Create" id="voucherForm">
+            <input type="hidden" name="returnToGeneral" value="true" />
             <!-- Top 3 Fields: Voucher Type, Transaction Number, and Date -->
             <div class="row mb-3">
                 <div class="col-md-3">
